<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Orientations.property">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_text_id"
            android:text="@string/contactInfo_string"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            />


        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/hotline_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_phone"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/hotline_string" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/hotline_string"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/soc_rel_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_phone"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/soc_rel_string" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/soc_rel_string"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/vacancy_phone_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/vacancy_phone"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/vacancy_string" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/vacancy_string"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>


</ScrollView>