<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Orientations.property">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/passage_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/passage"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/passage_string" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/passage_string"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/search_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/search"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/statement_string" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/statement_string"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/technical_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/technical"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/technical_string" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/technical_string"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/plan_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/plan"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/plan_string" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_string"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/document_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/document"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/document_string" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/document_string"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/archive_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/technical"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/archive_string" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/archive_string"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/debtor_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/debtor"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/debtor_string" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debtor_string"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardBackgroundColor="@color/gold"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/blockchain_id"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">



                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/blockchain"
                    android:background="@drawable/circle1"
                    android:contentDescription="@string/blockchain_string" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blockchain_string"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>